crates/vize_patina/src/rules/script/snapshots/vize_patina__rules__script__no_dupe_keys__tests__prop_duplicated_in_data.snap
---
source: crates/vize_patina/src/rules/script/no_dupe_keys.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-dupe-keys",
        severity: Error,
        message: "Duplicated key 'foo'",
        start: 60,
        end: 63,
        help: Some(
            "props, data, computed, methods, setup, and inject share the component instance namespace; give each member a unique name.",
        ),
        labels: [
            Label {
                message: "declared again in data",
                start: 60,
                end: 63,
            },
            Label {
                message: "first declared in props",
                start: 28,
                end: 33,
            },
        ],
        fix: None,
    },
]
